--- a/BlazorServer/_Imports.razor
+++ b/BlazorServer/_Imports.razor
@@ -5,6 +5,13 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.EntityFrameworkCore;
 @using Microsoft.JSInterop
 @using BlazorServer
 @using BlazorServer.Shared
+
+@using Bussiness.Context;
+@using Bussiness.Model;
+
+@inject HttpClient Http
+@inject NavigationManager NavigationManager
